--- a/admin-world/public/index.html
+++ b/admin-world/public/index.html
@@ -6,12 +6,93 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      #app-loading{
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        z-index: 1000;
+        background-color: #fff;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      #app-loading .svg-box{
+        width: 30px;
+        height: 30px;
+        position: relative;
+      }
+      #app-loading .circular {
+        -webkit-animation:rotate 2s linear infinite;
+        animation:rotate 2s linear infinite;
+        height:100%;
+        -webkit-transform-origin:center center;
+        transform-origin:center center;
+        width:100%;
+        position:absolute;
+        top:0;
+        bottom:0;
+        left:0;
+        right:0;
+        margin:auto
+      }
+      #app-loading .path {
+        stroke-dasharray:1,200;
+        stroke-dashoffset:0;
+        -webkit-animation:dash 1.5s ease-in-out infinite,color 6s ease-in-out infinite;
+        animation:dash 1.5s ease-in-out infinite,color 6s ease-in-out infinite;
+        stroke-linecap:round
+      }
+      @keyframes rotate {
+        to {
+          -webkit-transform:rotate(1turn);
+          transform:rotate(1turn)
+        }
+      }
+      @keyframes dash {
+        0% {
+          stroke-dasharray:1,200;
+          stroke-dashoffset:0
+        }
+        50% {
+          stroke-dasharray:89,200;
+          stroke-dashoffset:-35
+        }
+        to {
+          stroke-dasharray:89,200;
+          stroke-dashoffset:-124
+        }
+      }
+      @keyframes color {
+        0%,to {
+          stroke:#d62d20
+        }
+        40% {
+          stroke:#0057e7
+        }
+        66% {
+          stroke:#008744
+        }
+        80%,90% {
+          stroke:#ffa700
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app-loading">
+      <div class="svg-box">
+        <svg class="circular" viewBox="25 25 50 50">
+          <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="5" stroke-miterlimit="10"></circle>
+        </svg>
+      </div>
+    </div>
+    <div id="app" style="display: none;"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
